header icon size on mobile fix

--- a/waters-aem-frontend/src/styles/externalheader.scss
+++ b/waters-aem-frontend/src/styles/externalheader.scss
@@ -73,6 +73,7 @@
 
                 @include mobile {
                     width: 34px;
+                    height: 30px;
                     padding-left: 0;
                     margin-top: -6px;
                 }
